Always use _contentArea as superview for Tab's view.

Previously BVC used self.view as superview for tab.view to
animate NTP opening. This disallowed to create a view
controller for _contentArea because views hierarchy should
always match view controller's hierarchy.

To allow view controller creation, this CL always uses _contentArea
as superview for tab.view. In order to avoid animation issues,
_contentArea is temporary resized during NTP opening animation. Doing
this resize is fine in the short term, because _contentArea always
hosts NTP for this specific case. In the long term this code will be
removed because we will need a different NTP opening animation.

A separate _contentArea view controller will allow to fix download
manager presentation. That view controller will be a base view
controller for download manager coordinator, so download manager will
be presented in _contentArea behind the bottom toolbar.

_contentArea is created in a separate CL: crrev.com/c/981684

Bug: 818264
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I6e642d9e8fd856ef4c1a0fceb1cf7615dad050a7
Reviewed-on: https://chromium-review.googlesource.com/985150
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547442}
Former-commit-id: 687567cfbdd4c129191bae29f56e31fd3f364349